wrote slightely moar ;x

--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -10,7 +10,9 @@ While implementing the client, it became clear that some of our larger design ch
 
 In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented our two interfaces created in the design stage to handle incoming and outgoing commands in the GIM protocol. However, as we began entering method stubbs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming taffic, implementing the 'networkingOut and networkingIn' interfaces respectively.
 
- To create the networking component, the client had to create an instance of the 'ClientConnection' class and pass the network a "ServerConnection" object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was  to have a thread in the controller that would wait until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. 
+ To create the networking component, the client had to create an instance of the 'ClientConnection' class and pass the network a "ServerConnection" object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was to have the thread that the GUI was running on waiting until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. This plan was to accomodate the fact that Swing components must be accessed from the main GUI thread only. However, upon further investigation of concurrency in swing, we discovered that Swing had a 'buffer' of its own, that could be used as an alternative to queue GUI events. 
+
+ \footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detail on the Swing Event Queue.}
 
 
 \subsection{Collaboration}
