--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -10,14 +10,12 @@ While implementing the client, it became clear that some of our larger design ch
 
 In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented our two interfaces created in the design stage to handle incoming and outgoing commands in the GIM protocol. However, as we began entering method stubbs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming taffic, implementing the 'networkingOut and networkingIn' interfaces respectively.
 
- To create the networking component, the client had to create an instance of the 'ClientConnection' class and pass the network a "ServerConnection" object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was to have the thread that the GUI was running on waiting until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. This plan was to accomodate the fact that Swing components must be accessed from the main GUI thread only. However, upon further investigation of concurrency in swing, we discovered that Swing had a 'buffer' of its own, that could be used as an alternative to queue GUI events. 
-
- \footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detail on the Swing Event Queue.}
+ To create the networking component, the client had to create an instance of the 'ClientConnection' class and pass the network a "ServerConnection" object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread only. After confusion attempting to implement our ill informed design, we had to investigate alternative method of altering the GUI. Upon further investigation of concurrency in swing, we discovered that Swing had a 'buffer' (named the "Event Queue") of its own, that could be used as an alternative to queue GUI events. \footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.}  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour.
 
 
 \subsection{Collaboration}
 
-The first draft of the GIM protocol treated all conversations as `rooms' and did not distinguish group chats and personal chats\footnote{internal reference to protocol section}. In designing the protocol, we wished to keep it abstract and not fall into the trap of implicitly implementing features that the client and server could handle. Our goal was not to develop a protocol suitable for only one type of implementation. Originally, it was believed that the client could distinguish personal chats and group chats by storing internal records of the type of outgoing invites to chat. In the case of being invited to chat, we believed using the protocol's ``USER'' argument in the ``::ROOM::'' command would be sufficient to count the amount of users in the room and determine the type of chat. However, as we began implementing room creation, it became clear that the initial group user list could be of size 1, and thus the wrong chat window could be created. As a result, the protocol had to be changed, and the client amended to reflect these changes. 
+The first draft of the GIM protocol treated all conversations as `rooms' and did not distinguish group chats and personal chats\footnote{internal reference to protocol section}. In designing the protocol, we wished to keep it abstract and not fall into the trap of implicitly implementing features that the client and server could handle. Our goal was not to develop a protocol suitable for only one type of implementation. Originally, it was believed that the client could distinguish personal chats and group chats by storing internal records of the type of outgoing invites to chat. In the case of being invited to chat, we believed using the protocol's ``USER'' argument in the ``\texttt{:ROOM:}'' command would be sufficient to count the amount of users in the room and determine the type of chat. However, as we began implementing room creation, it became clear that the initial group user list could be of size 1, and thus the wrong chat window could be created. As a result, the protocol had to be changed, and the client amended to reflect these changes. 
 
 This change was a test of the boundary of responsibilities within our system, as it effected communication with the server and the back end of the client. The protocol engineer's solution to the issue was to add a `type' argument to the room command. In the case creating a room, the type now had to be specified. To allow a user to work out what room type a chat had, the `type' argument would be used, with a room identifier. This kept the protocol more abstract. In order to deal with these changes, our client had to be designed to sequence responses from the server for certain requests. As the protocol did not include sequence numbers, we had to re-design the model to perform this task. It was apparent that the amount of ``talk'' between the client and server required to start a chat was now increased. This required an understanding of what needed to be achieved at each stage in the 'conversation.' This high level plan was determined:
 
