eesh, a bit more

--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -10,7 +10,7 @@ While implementing the client, it became clear that some of our larger design ch
 
 In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented our two interfaces created in the design stage to handle incoming and outgoing commands in the GIM protocol. However, as we began entering method stubbs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming taffic, implementing the 'networkingOut and networkingIn' interfaces respectively.
 
- To create the networking component, the client had to create an instance of the 'ClientConnection' class and pass the network a "ServerConnection" object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread only. After confusion attempting to implement our ill informed design, we had to investigate alternative method of altering the GUI. Upon further investigation of concurrency in swing, we discovered that Swing had a 'buffer' (named the "Event Queue") of its own, that could be used as an alternative to queue GUI events. \footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.}  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour.
+ To create the networking component, the client had to create an instance of the 'ClientConnection' class and pass the network a "ServerConnection" object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread only. After confusion attempting to implement our ill informed design, we had to investigate alternative method of altering the GUI. Upon further investigation of concurrency in swing, we discovered that Swing had a 'buffer' (named the "Event Queue") of its own, that could be used as an alternative to queue GUI events. \footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.} To use this event queue, it is neccessary to wrap any code you wish to run on the UI thread in an anonymous class implementing "Runnable" as a parameter to the "invokeLater()" method.  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour as there would be 2 intermediate queues. In retrospect, we may have abused this option in our implementation as there are some lines of code that are queued on the Swing EventQueue that are mixed in with lines that do, to keep the order of events sequential. Any behaviour that is tied with these mixed lines of code then also has to be queued, which had the effect of making tracking down thread errors more difficult than it could have been. 
 
 
 \subsection{Collaboration}
