--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -7,6 +7,7 @@ This section will analyse how appropriate our client design was to achieve the a
 While implementing the client, it became clear that some of our larger design choices were naive, and further design work had to be conducted. One case involved the interaction between the controller and networking subsystem. These changes will be discussed in the `Design Implementation' section. In some cases, smaller design choices required larger changes. Of particular significance, our understanding of the practical working of the GIM protocol to create personal chats proved to be weak. This required design work reaching over the protocol and the model component of the system. This process tested our ability to collaborate as a team to implement an interacting system. The degree of success of our changes will be discussed in the 'Collaboration' section. Furthermore, as we became more familiar with the Java Swing environment, our code went through evolutionary steps to implement certain features in a more sensible manner, such as how displaying updates to user information was handled. The 'Evolution of Code' section will discuss problems we identified with code that was functional but deemed to be hard to maintain, and the merits of the changes we made, such as in the above case. 
 
 \subsection{Design Implementation}
+\label{designimpl}
 
 In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented our two interfaces created in the design stage to handle incoming and outgoing commands in the GIM protocol. However, as we began entering method stubbs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming taffic, implementing the 'networkingOut and networkingIn' interfaces respectively.
 
